updated readme for css cdn guide

--- a/livetestserver/importmap_test.html
+++ b/livetestserver/importmap_test.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnyGridJS Test</title>
+    <link rel="stylesheet" href="https://unpkg.com/anygridcss@1.0.0/anyGrid.css">
+
 </head>
 <body>
 
@@ -18,7 +20,7 @@
 </script>
 
 
-<script src="esm_app.js"></script>
+<script src="esm_app.js" type="module"></script>
 
 </body>
 
